tests/neg/i9408b/Conv_1.scala
package test.conversions

object Conv {
  implicit val implicitLength: String => Int = _.length
}
